# chess_gold

./: .gitignore  .gitmodules
common/: make_msg_file.bat  make_msg_file.sh  流程.txt
common/cs_msg/: base_msg_struct.proto  client_logic_msg.proto  error_code.proto  kuaipao_logic_msg.proto  land_logic_msg.proto  msg_define.proto  servers_msg.proto
common/cs_msg/cpp/: base_msg_struct.pb.cc  base_msg_struct.pb.h  client_logic_msg.pb.cc  client_logic_msg.pb.h  error_code.pb.cc  kuaipao_logic_msg.pb.cc  kuaipao_logic_msg.pb.h  land_logic_msg.pb.cc  land_logic_msg.pb.h  msg_define.pb.cc  msg_define.pb.h  servers_msg.pb.cc  servers_msg.pb.h
server/: CMakeLists.txt  Default.xml  rebuild_all.sh  rebuild_center.sh  rebuild_common.sh  rebuild_game.sh  rebuild_game_frame.sh  rebuild_lobby.sh  rebuild_pb.sh
server/cmake_config/: config.cmake
server/release/: checkrun_allserver.sh  config.sh  reload_all.sh  restart_all.sh  stop_all.sh
server/release/center_server/: checkrun_server.sh  reload.sh  restart_game.sh  stop.sh
server/release/game_server/: checkrun_server.sh  reload.sh  restart_game.sh  stop.sh
server/release/game_server/lua/: game_config.lua
server/release/game_server/lualib/base/: common_func.lua  idpool.lua  stringop.lua  tableop.lua
server/release/lobby_server/: checkrun_server.sh  reload.sh  restart_game.sh  stop.sh
server/release/lobby_server/lua/: main.lua  player_handle.lua
server/release/lobby_server/lualib/base/: commonop.lua  fileop.lua  preload.lua
server/release/lobby_server/lualib/public/: ipoperate.lua  version.lua
server/release/server_config/: server_config.lua
server/servers/center_server/src/: center_mgr.cpp  center_mgr.h  game_server.cpp
server/servers/common/src/: common_logic.cpp  common_logic.h  data_cfg_mgr.cpp  data_cfg_mgr.h  db_struct_define.h  game_define.h  game_server_config.cpp  game_server_config.h  player_base.cpp  player_base.h  player_mgr.cpp  player_mgr.h
server/servers/common/src/mysql_mgr/: db_operator.cpp  db_operator.h  dbmysql_mgr.cpp  dbmysql_mgr.h
server/servers/common/src/redis_mgr/: redis_mgr.cpp  redis_mgr.h
server/servers/common/src/server_connect/: server_client.cpp  server_client.h  server_connector.cpp  server_connector.h
server/servers/game_frame/src/: game_player.cpp  game_player.h
server/servers/game_frame/src/game_table/: game_room.cpp  game_room.h  game_room_mgr.cpp  game_room_mgr.h  game_table.cpp  game_table.h  game_table_coin.cpp  game_table_coin.h
server/servers/game_frame/src/lua_logic/: lua_logic.cpp  lua_logic.h
server/servers/game_frame/src/net/: center_client.cpp  center_client.h  lobby_mgr.cpp  lobby_mgr.h  msg_lobby_handle.cpp  msg_lobby_handle.h
server/servers/game_frame/src/robot/: robot.cpp  robot.h  robot_mgr.cpp  robot_mgr.h
server/servers/game_server/src/: game_logic_mgr.cpp  game_logic_mgr.h  game_server.cpp
server/servers/game_server/src/game_logic/kuaipao/: game_kuaipao_table.cpp  game_kuaipao_table.h  kuaipao_logic.cpp  kuaipao_logic.h
server/servers/game_server/src/game_logic/landlord/: game_land_table.cpp  game_land_table.h  land_logic.cpp  land_logic.h
server/servers/game_server/src/poker/: poker_logic.cpp  poker_logic.h
server/servers/lobby_server/src/: game_server.cpp  player.cpp  player.h
server/servers/lobby_server/src/client_msg/: msg_client_handle.cpp  msg_client_handle.h  msg_plat_handle.cpp  msg_plat_handle.h
server/servers/lobby_server/src/lua_logic/: lua_logic.cpp
server/servers/lobby_server/src/mission/: mission_mgr.cpp  mission_mgr.h
server/servers/lobby_server/src/net/: center_client.cpp  center_client.h  game_server_mgr.cpp  game_server_mgr.h
server/servers/pb/src/: base_msg_struct.pb.h  client_logic_msg.pb.cc  client_logic_msg.pb.h  error_code.pb.cc  error_code.pb.h  kuaipao_logic_msg.pb.cc  kuaipao_logic_msg.pb.h  land_logic_msg.pb.cc  land_logic_msg.pb.h  msg_define.pb.h
